--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "Simple todo list application",
   "main": "index.js",
+  "devtool": "source-map",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --progress --mode=production",
+    "build": "webpack --progress --mode=development",
     "open": "open ./dist/index.html",
-    "start": "webpack serve --open --mode=production"
+    "start": "webpack serve --open --mode=development"
   },
   "repository": {
     "type": "git",
